# lang-ecosystem-evolution

./: README.md  app.py  main.py  pyproject.toml
.streamlit/: config.toml
app_pages/: about.py  community.py  concentration.py  embeddings.py  popularity.py  presentation.py  sampling.py  winners.py
data/: DATASET.md  github_language_activity_monthly.csv
notebooks/: initial_data_quality_checks.ipynb
report/: .gitignore  export_figures.py  report.tex
scripts/: build_notebook.py
src/lang_ecosystem/: __init__.py  analysis.py  streamlit_helpers.py  visuals.py
tests/: test_analysis.py
